Fixed modal visibilty issue.

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,8 +1,14 @@
+.hidden {
+  display: none;
+}
+
 #nav_container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  height: 4em;
+  border-bottom: 1px solid lightgray;
 }
 
 #logo {
@@ -12,11 +18,10 @@
   margin-left: 5em;
 }
 
-#navigation {
+.navigation {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  min-width: 400px;
+  min-width: 300px;
   list-style: none;
   border: 0;
   margin: 0;
@@ -35,7 +40,7 @@
   padding: 0;
 }
 
-.nav_button {
+.nav_button_large {
   background-color: #ffffff;
   border: 1px solid #222222;
   border-radius: 8px;
@@ -48,34 +53,15 @@
   font-size: 16px;
   font-weight: 600;
   line-height: 20px;
-  margin: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  margin-left: 1em;
+  margin-right: 0;
   outline: none;
   padding: 13px 23px;
   position: relative;
   text-align: center;
   text-decoration: none;
-  touch-action: manipulation;
-  transition: box-shadow 0.2s, -ms-transform 0.1s, -webkit-transform 0.1s,
-    transform 0.1s;
   user-select: none;
-  -webkit-user-select: none;
   width: auto;
-}
-
-.button_home:focus-visible {
-  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
-  transition: box-shadow 0.2s;
-}
-
-.button_home:active {
-  background-color: #f7f7f7;
-  border-color: #000000;
-  transform: scale(0.96);
-}
-
-.button_home:disabled {
-  border-color: #dddddd;
-  color: #dddddd;
-  cursor: not-allowed;
-  opacity: 1;
 }
